--- a/Purple cap (3).ipynb
+++ b/Purple cap (3).ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
        "4     2017        B Kumar"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,8 @@
     "mask1=data3['dismissal_kind']!='run out' \n",
     "mask2=data3['dismissal_kind'].isnull()==False\n",
     "mask3=data3['dismissal_kind']!='obstructing the field '\n",
-    "wicket=data3[mask1 & mask2 & mask3]\n",
+    "mask4=data3['dismissal_kind']!='retired hurt '\n",
+    "wicket=data3[mask1 & mask2 & mask3 & mask4]\n",
     "wicket.groupby(['season','bowler'])['ball'].count().sort_values(ascending=False).reset_index().drop_duplicates(subset='season',keep='first').sort_values('season')[['season','bowler']]\n"
    ]
   },
